RESOLVED FIXED100956
[EFL] Fix event mapping for WebKit2 with coordinated graphics
https://bugs.webkit.org/show_bug.cgi?id=100956
Summary [EFL] Fix event mapping for WebKit2 with coordinated graphics
Kenneth Rohde Christiansen
Reported 2012-11-01 07:14:13 PDT
SSIA
Attachments
Patch (1.59 KB, patch)
2012-11-01 07:15 PDT, Kenneth Rohde Christiansen
no flags
Kenneth Rohde Christiansen
Comment 1 2012-11-01 07:15:10 PDT
Yael
Comment 2 2012-11-01 07:18:56 PDT
Is this a recent regression? If so, I think you should mention that.
Kenneth Rohde Christiansen
Comment 3 2012-11-01 07:21:01 PDT
It was not working before for me either, but my former fix didn't solve it correctly apparently.
WebKit Review Bot
Comment 4 2012-11-01 07:56:37 PDT
Comment on attachment 171841 [details] Patch Clearing flags on attachment: 171841 Committed r133170: <http://trac.webkit.org/changeset/133170>
WebKit Review Bot
Comment 5 2012-11-01 07:56:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.