[EFL] Fix event mapping for WebKit2 with coordinated graphics https://bugs.webkit.org/show_bug.cgi?id=100956

Reviewed by Alexis Menard.

Apply scale after translation.

* UIProcess/API/efl/ewk_view.cpp:
(toWebContentTransform):


Canonical link: https://commits.webkit.org/119037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133170 268f45cc-cd09-0410-ab3c-d52691b4dbfc